# sylvia-generics-example

./: Cargo.toml
contracts/interface-generics/: Cargo.toml
contracts/interface-generics/src/: contract.rs  lib.rs  multitest.rs  my_interface.rs  my_interface_impl.rs
