[workspace]
members = ["contracts/*"]

[workspace.package]
authors   = ["Mr T <mr-t@arkprotocol.io>"]
version       = "0.0.1"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/arkprotocol/cw-libs"
homepage   = "https://arkprotocol.io"
rust-version  = "1.65"
keywords   = ["cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std    = "^1.2"
cw2             = "^1.1"
cw20            = "^1.1"
cw721           = "^0.18"
cw721-base      = "^0.18"
cw-multi-test   = "^0.16"
cw-ownable      = "^0.5"
cw-storage-plus = "^1.1"
cw-utils        = "^1.0"
schemars        = "^0.8"
serde           = "^1.0"
sylvia = "^0.7"
thiserror       = "^1.0"

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
